--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
 
 	<p>Current Weather Forecast
 	</p>
-<img src="cannonbeachweather.png" id="cbw">
+<img src="cannonbeachweather.PNG" id="cbw">
 
 
 	</div>
 
 	<div id="upcomingevents">
 		<p>Upcoming Events</p>
-		<img src="cannonbeachsmallcalendar.png" id="cbsc">
+		<img src="cannonbeachsmallcalendar.PNG" id="cbsc">
 
 	</div>
 
